--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3"
 services:
 
   backend:
+    image: rubix982/jina-backend:v1.0.0    
     container_name: protein-search-backend
     build:
       context: ./backend
@@ -15,6 +16,7 @@ services:
       - "8020:8020"
 
   frontend:
+    image: rubix982/jina-frontend:v1.0.0
     container_name: protein-search-frontend
     build: 
       context: ./frontend
