Added aiohttp dependency, remove app.py for testing
Signed-off-by: Saif Ul Islam <saifulislam84210@gmail.com>

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,3 +10,11 @@ pydantic==1.8.2
 starlette==0.14.2
 typing-extensions==3.10.0.0
 uvloop==0.15.3
+aiohttp==3.7.4.post0
+async-timeout==3.0.1
+attrs==21.2.0
+chardet==4.0.0
+idna==3.2
+multidict==5.1.0
+typing-extensions==3.10.0.0
+yarl==1.6.3
