Added .csv and embeddings to .gitignore
Signed-off-by: Saif Ul Islam <saifulislam84210@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,7 @@ dmypy.json
 
 # Persistent data file
 data/proteins.json
+
+# Custom - backend
+backend/embeddings/**/**
+backend/data/pdb_data_seq.csv
