Added directories to ignore, more instructions to "docker" policy, docker volume mapping
Signed-off-by: Saif Ul Islam <saifulislam84210@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -135,5 +135,8 @@ dmypy.json
 data/proteins.json
 
 # Custom - backend
-backend/embeddings/**/**
+backend/embeddings/
 backend/data/
+backend/models/
+backend/tokenizers/
+backend/results
