--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,8 @@ services:
     restart: always
     volumes: 
         - "./backend:/app"
-        - "./backend/requirements.txt:/app/requirements.txt"
+        - "./backend/models:/app/models"
+        - "./backend/tokenizers:/app/tokenizers"
     ports:
       - "8020:8020"
 
