--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 # Get image for Python
-FROM python:3.8-slim-buster
+FROM python:3.8
 
 # Set working directory
 WORKDIR /app/
@@ -7,11 +7,17 @@ WORKDIR /app/
 # pip does not like being run as root, so create a user
 RUN useradd --create-home jina
 
-# Add the data folder locally to container
-COPY ./data /app/data
+# Add the models folder locally to container
+COPY ./models /app/models
 
-# Give read permissions for the data folder
-RUN chown jina data
+# Give jina user permission to the folder
+RUN chown jina models
+
+# Add the tokernizers folder locally to container
+COPY ./tokenizers /app/tokenizers
+
+# Give jina user permission to the folder
+RUN chown jina tokenizers
 
 # Switch to user
 USER jina
