--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,3 +18,8 @@ idna==3.2
 multidict==5.1.0
 typing-extensions==3.10.0.0
 yarl==1.6.3
+numpy==1.21.1
+pandas==1.3.1
+python-dateutil==2.8.2
+pytz==2021.1
+six==1.16.0
