--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,5 @@
 torch==1.9.0
 transformers==4.9.0
-jina==2.0.10
 asgiref==3.4.1
 click==8.0.1
 h11==0.12.0
@@ -18,3 +17,5 @@ idna==3.2
 multidict==5.1.0
 typing-extensions==3.10.0.0
 yarl==1.6.3
+pandas
+jina
