Resolved `make deps` to `front`, `back`, introduced Docker changes to handle both
Signed-off-by: Saif Ul Islam <saifulislam84210@gmail.com>

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,6 +17,9 @@ USER jina
 ENV PYTHONPATH "${PYTHONPATH}:/home/jina/.local/bin"
 ENV PATH "${PATH}:/home/jina/.local/bin"
 
+# Is the application currently running in Docker?
+ENV DOCKER "True"
+
 # Add requirement contents
 COPY ./requirements.txt requirements.txt
 COPY ./requirements-pre.txt requirements-pre.txt
